[metadata]
name = seg2link
version = 0.1.4
author = Chentao Wen
author_email = chintou.on@gmail.com
description = A napari based 3D segmentation software for electron microscopy images
url = https://github.com/WenChentao/Seg2Link
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = seg2link
python_requires = >=3.8
include_package_data = True
install_requires =
        napari[pyqt5]==0.4.10
        scikit-image==0.18.3

[options.package_data]
seg2link = icon_small.png

[options.entry_points]
console_scripts =
    seg2link = seg2link.start_seg2link:main


